# semantic-domains-extender

./: .gitignore  LICENSE  README.md  pyproject.toml
extender/data/: model.py
extender/generation/: prompting.py
extender/generation/wrappers/: generic.py  guidance.py
extender/grammar/: guidance_grammar.py  parser.py
extender/parsing/: tokenizers.py
extender/scripts/: assign_word_pos.py  extend.py  grammar_constraned_generation.py  sd_pos_analyzer.py
extender/scripts/extend/: assign_usage_examples.py  assign_word_frequencies.py  assign_word_pos.py  assign_word_proficiency_levels.py  extend.sh  rank_semantic_domains.py
extender/scripts/extract/: convert_domains_format.py  extract.sh  parse_esllounge_preficiency_lists.py  parse_kelly_proficiency_list.py  stream_open_subtitles_text.py  word_count.py
